@startuml class_project_team
title Classes — Project and Team

top to bottom direction

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 65
skinparam class {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              11
  FontStyle             plain
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam enum {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              15
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam ArrowColor      #333333
skinparam ArrowThickness  1.4
skinparam ArrowFontColor  #000000
skinparam ArrowFontStyle  plain
skinparam ArrowFontName   Helvetica
skinparam ArrowFontSize   12
skinparam TitleFontName   Helvetica
skinparam TitleFontSize   13
skinparam TitleFontColor  #333333
skinparam noteBorderColor     #AAAAAA
skinparam noteBackgroundColor #FAFAFA
skinparam noteFontName        Helvetica
skinparam noteFontSize        11
hide circle
hide empty methods

enum ProjectStatus {
  DRAFT
  ACTIVE
  ON_HOLD
  COMPLETED
  CANCELLED
  --
  + canTransitionTo(target) : boolean
}

class Project {
  - code : String
  - name : String
  - client : String
  - status : ProjectStatus
  - initialBudget : BigDecimal
  - revisedBudget : BigDecimal
  - currency : String
  - soldWorkloadDays : BigDecimal
  - archived : boolean
  --
  + getEffectiveBudget() : BigDecimal
}

class User {
  - firstName : String
  - lastName : String
  - email : String
}

class TeamAssignment {
  - roleInTeam : String
  - startDate : LocalDate
  - endDate : LocalDate
}

class Resource {
  - dailyRate : BigDecimal
  - tccRate : BigDecimal
}

Project ..> ProjectStatus
Project "*" -- "1" User : director
Project "*" -- "0..1" User : project manager
Project "1" *-- "*" TeamAssignment
TeamAssignment "*" -- "1" User : member
Resource "0..1" -- "1" User : cost of
note right of Project
  Effective budget = revisedBudget if set, otherwise initialBudget.
end note

note bottom of ProjectStatus
  Any illegal transition is rejected (HTTP 422).
end note

@enduml
